got the score funtion up and running and fixed the spacing on the highscore form

--- a/style.css
+++ b/style.css
@@ -32,4 +32,11 @@
 .hidden {
     display: none;
 }
+#userScore {
+    padding: 20px;
+    font-weight: bold;
+}
+#enterInitialLabel-text {
+    font-weight: bold;
+}
   
